Fix reponsive styles

--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -69,10 +69,10 @@ $h5: 1.25rem;
 
 /* Padding */
 
-$padding: 30px;
+$padding: 1rem;
 $margins: 1.5rem;
-$content-padding: 60px 0;
-$content-padding-mobile: 30px 0;
+$content-padding: 4rem 0;
+$content-padding-mobile: 2rem 0;
 
 /* Borders */
 
