Update mobile nav

--- a/assets/scss/components/_layout.scss
+++ b/assets/scss/components/_layout.scss
@@ -75,6 +75,7 @@ main {
 @include small-breakpoint {
   .flex-grid {
     .lists {
+      width: auto;
       min-width: calc(25% - 20px);
     }
   }
