--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -7,7 +7,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: $large;
-    padding: 0.5rem;
+    padding: 0.75rem;
     a {
       text-decoration: none;
       line-height: 1.2rem;
@@ -16,13 +16,14 @@
       display: flex;
       justify-self: start;
       align-items: center;
+      margin-bottom: .5rem;
       background: $accent-color;
       a {
         display: flex;
         justify-content: center;
         align-items: center;
         font-family: $display;
-        color: rgba(255, 255, 255, 0.8);
+        color: rgba(255, 255, 255, 1);
         font-weight: 700;
         font-size: 1.2rem;
         img {
@@ -33,8 +34,8 @@
         }
       }
       .logo {
-        height: 30px;
-        width: 30px;
+        height: 25px;
+        width: 25px;
       }
     }
     .navigation-links {
@@ -49,16 +50,17 @@
         font-weight: 400;
         padding: 0.5rem;
         text-align: center;
-        flex: 1;
         &.button {
+          align-self: flex-end;
+          max-width: 100px;
           font-family: $font-family;
           margin: 0 2px;
           align-self: center;
-          padding: 10px;
+          padding: 8px 10px;
           font-size: 0.9rem;
           width: 100%;
           color: white !important;
-          margin: 0 1rem;
+          margin-left: auto;
         }
         &:hover {
           color: $primary-color;
@@ -76,9 +78,10 @@
       justify-items: center;
       align-items: center;
       grid-gap: 5%;
-      padding: 1rem 2rem;
+      padding: 1rem;
       height: 80px;
       .navigation-brand {
+        margin-bottom: 0;
         a {
           font-size: 1.8rem;
         }
@@ -90,13 +93,13 @@
       .navigation-links {
         justify-content: flex-end;
         a {
-          font-size: 1.2rem;
-          padding: 1rem;
+          font-size: 1.1rem;
+          padding: 0.75rem;
           flex: none;
           &.button {
-            margin: 0 5px;
-            padding: 15px 20px;
-            font-size: 1.2rem;
+            margin: 0 0 0 .75rem;
+            padding: .75rem 1rem;
+            font-size: 1.1rem;
             width: auto;
           }
         }
