--- a/public/css/main.css
+++ b/public/css/main.css
@@ -747,7 +747,7 @@ dd {
   color: #ffffff;
   font-weight: 600;
   font-family: "Quattrocento Sans", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 1.1rem;
+  font-size: 1rem;
   text-transform: none;
   padding: 1rem 1.5rem;
   margin: 0;
@@ -938,7 +938,7 @@ caption {
     margin-left: auto;
     margin-right: auto;
     max-width: 1150px;
-    padding: 0.5rem; }
+    padding: 0.75rem; }
     .navigation-outer .navigation a {
       text-decoration: none;
       line-height: 1.2rem; }
@@ -946,13 +946,14 @@ caption {
       display: flex;
       justify-self: start;
       align-items: center;
+      margin-bottom: .5rem;
       background: #231f20; }
       .navigation-outer .navigation .navigation-brand a {
         display: flex;
         justify-content: center;
         align-items: center;
         font-family: "Montserrat Alternates", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
-        color: rgba(255, 255, 255, 0.8);
+        color: white;
         font-weight: 700;
         font-size: 1.2rem; }
         .navigation-outer .navigation .navigation-brand a img {
@@ -960,8 +961,8 @@ caption {
         .navigation-outer .navigation .navigation-brand a:hover {
           color: #eb7e49; }
       .navigation-outer .navigation .navigation-brand .logo {
-        height: 30px;
-        width: 30px; }
+        height: 25px;
+        width: 25px; }
     .navigation-outer .navigation .navigation-links {
       display: flex;
       align-items: center;
@@ -973,17 +974,18 @@ caption {
         color: white;
         font-weight: 400;
         padding: 0.5rem;
-        text-align: center;
-        flex: 1; }
+        text-align: center; }
         .navigation-outer .navigation .navigation-links a.button {
+          align-self: flex-end;
+          max-width: 100px;
           font-family: "Mandali", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
           margin: 0 2px;
           align-self: center;
-          padding: 10px;
+          padding: 8px 10px;
           font-size: 0.9rem;
           width: 100%;
           color: white !important;
-          margin: 0 1rem; }
+          margin-left: auto; }
         .navigation-outer .navigation .navigation-links a:hover {
           color: #eb7e49; }
 
@@ -994,23 +996,25 @@ caption {
     justify-items: center;
     align-items: center;
     grid-gap: 5%;
-    padding: 1rem 2rem;
+    padding: 1rem;
     height: 80px; }
-    .navigation-outer .navigation .navigation-brand a {
-      font-size: 1.8rem; }
-    .navigation-outer .navigation .navigation-brand .logo {
-      height: 50px;
-      width: 50px; }
+    .navigation-outer .navigation .navigation-brand {
+      margin-bottom: 0; }
+      .navigation-outer .navigation .navigation-brand a {
+        font-size: 1.8rem; }
+      .navigation-outer .navigation .navigation-brand .logo {
+        height: 50px;
+        width: 50px; }
     .navigation-outer .navigation .navigation-links {
       justify-content: flex-end; }
       .navigation-outer .navigation .navigation-links a {
-        font-size: 1.2rem;
-        padding: 1rem;
+        font-size: 1.1rem;
+        padding: 0.75rem;
         flex: none; }
         .navigation-outer .navigation .navigation-links a.button {
-          margin: 0 5px;
-          padding: 15px 20px;
-          font-size: 1.2rem;
+          margin: 0 0 0 .75rem;
+          padding: .75rem 1rem;
+          font-size: 1.1rem;
           width: auto; } }
 
 /* Layout
@@ -1027,15 +1031,20 @@ main {
 .lead {
   text-align: center; }
   .lead h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-family: "Montserrat Alternates", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
     margin-bottom: 0.5rem; }
   .lead p {
-    font-size: 1.4rem; }
+    font-size: 1.2rem; }
 
 @media (min-width: 750px) {
   .lead h1 {
-    font-size: 5rem; } }
+    font-size: 5rem; }
+  .lead p {
+    font-size: 1.4rem; } }
+
+.display {
+  font-family: "Montserrat Alternates", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif; }
 
 .pattern-border {
   background: #eb7e49 url("../images/pattern.svg");
@@ -1062,8 +1071,7 @@ main {
     margin: 10px;
     width: 100%; }
   .flex-grid .list-title {
-    color: #eb7e49;
-    text-align: center; }
+    color: #eb7e49; }
   .flex-grid .list-items {
     padding: 1rem 0; }
     .flex-grid .list-items ul {
@@ -1078,12 +1086,10 @@ main {
   flex-direction: column; }
   .flex-list .items {
     display: flex;
-    margin: 1rem 0;
-    flex-direction: row;
+    flex-direction: column;
     flex: auto;
+    margin: 1rem 0;
     max-width: 100%;
-    justify-content: space-between;
-    align-items: center;
     border-bottom: 1px solid #dedede; }
     .flex-list .items:last-of-type {
       border-bottom: 0; }
@@ -1091,17 +1097,26 @@ main {
     margin-bottom: 0; }
   .flex-list .list-item {
     display: block;
+    align-items: center;
     font-size: 1.3rem;
     font-weight: 700;
-    align-items: center;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
     line-height: 1.2; }
   .flex-list .list-options {
-    display: flex;
-    justify-content: center; }
+    display: flex; }
     .flex-list .list-options a,
     .flex-list .list-options input {
       margin: 0 2px; }
+
+@media (min-width: 750px) {
+  .flex-list .items {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; }
+  .flex-list .list-options {
+    justify-content: center; }
+  .flex-list .list-item {
+    margin-bottom: 0; } }
 
 .section-grid {
   display: grid;
@@ -1125,19 +1140,17 @@ main {
   .listing:last-of-type {
     border-bottom: 0; }
 
-.card, .form-container {
+.card {
   border-radius: 4px;
   background: white;
   padding: 2rem;
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.1);
   min-height: 100%; }
-  .card h1, .form-container h1,
+  .card h1,
   .card h2,
-  .form-container h2,
-  .card h3,
-  .form-container h3 {
+  .card h3 {
     margin-top: 0; }
-  .card.solo, .solo.form-container {
+  .card.solo {
     min-height: auto; }
 
 .form-container {
@@ -1178,7 +1191,7 @@ main {
 .site-footer {
   padding: 30px 0;
   background: #231f20;
-  color: white; }
+  color: rgba(255, 255, 255, 0.8); }
   .site-footer p {
     margin-bottom: 0; }
     .site-footer p.summary {
@@ -1201,7 +1214,7 @@ main {
       align-items: center;
       justify-content: center;
       font-family: "Montserrat Alternates", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
-      color: rgba(255, 255, 255, 0.8);
+      color: white;
       font-weight: 700;
       font-size: 1.4rem;
       margin-bottom: 1rem; }
