--- a/public/css/main.css
+++ b/public/css/main.css
@@ -465,7 +465,7 @@ h4,
 h5 {
   margin: 1.5rem 0;
   font-weight: 700;
-  font-family: "Mandali", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: "Hind", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
   line-height: 1.3;
   color: #0e0c0c; }
   h1:not(:first-child),
@@ -746,8 +746,8 @@ dd {
   background: #eb7e49;
   color: #ffffff;
   font-weight: 600;
-  font-family: "Quattrocento Sans", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 1rem;
+  font-family: "Mandali", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 1.1rem;
   text-transform: none;
   padding: 1rem 1.5rem;
   margin: 0;
