--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -45,7 +45,7 @@
       background: $accent-color;
       a {
         display: block;
-        font-size: 1rem;
+        font-size: .95rem;
         color: rgba(255, 255, 255, 1);
         font-weight: 400;
         padding: 0.5rem;
