--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -45,7 +45,7 @@ $font-family: 'Mandali', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helv
 $line-height: 1.6;
 
 // Headings
-$heading-font-color: #0e0c0c;
+$heading-font-color: $accent-color;
 $heading-font-weight: 700;
 $heading-font-family: 'Hind', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial,
   sans-serif;
@@ -55,8 +55,8 @@ $display: 'Montserrat Alternates', -apple-system, BlinkMacSystemFont, Helvetica 
 
 // Mobile heading font size
 $h1-mobile: 1.75rem;
-$h2-mobile: 1.5rem;
-$h3-mobile: 1.25rem;
+$h2-mobile: 1.6rem;
+$h3-mobile: 1.4rem;
 $h4-mobile: 1.1rem;
 $h5-mobile: 1rem;
 
@@ -88,8 +88,8 @@ $button-background: $primary-color;
 $button-background-hover: darken($button-background, 8%);
 $button-color: #ffffff;
 $button-font-weight: 600;
-$button-font-family: 'Mandali', -apple-system, BlinkMacSystemFont, Helvetica Neue,
-  Helvetica, Arial, sans-serif;
+$button-font-family: 'Mandali', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial,
+  sans-serif;
 $button-font-size: 1.1rem;
 $button-border-width: 2px;
 $button-border-style: solid;
