--- a/public/css/main.css
+++ b/public/css/main.css
@@ -467,7 +467,7 @@ h5 {
   font-weight: 700;
   font-family: "Hind", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
   line-height: 1.3;
-  color: #0e0c0c; }
+  color: #231f20; }
   h1:not(:first-child),
   h2:not(:first-child),
   h3:not(:first-child),
@@ -485,10 +485,10 @@ h1 {
   font-size: 1.75rem; }
 
 h2 {
-  font-size: 1.5rem; }
+  font-size: 1.6rem; }
 
 h3 {
-  font-size: 1.25rem; }
+  font-size: 1.4rem; }
 
 h4 {
   font-size: 1.1rem; }
@@ -749,7 +749,7 @@ dd {
   font-family: "Mandali", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 1.1rem;
   text-transform: none;
-  padding: 1rem 1.5rem;
+  padding: .75rem 1rem;
   margin: 0;
   vertical-align: middle;
   text-align: center;
@@ -772,6 +772,10 @@ dd {
 .button::-moz-focus-inner, a.button::-moz-focus-inner, button::-moz-focus-inner, [type=submit]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=button]::-moz-focus-inner {
   border: 0;
   padding: 0; }
+
+@media (min-width: 750px) {
+  .button, a.button, button, [type=submit], [type=reset], [type=button] {
+    padding: 1rem 1.5rem; } }
 
 .accent-button,
 a.accent-button {
@@ -970,7 +974,7 @@ caption {
       background: #231f20; }
       .navigation-outer .navigation .navigation-links a {
         display: block;
-        font-size: 1rem;
+        font-size: .95rem;
         color: white;
         font-weight: 400;
         padding: 0.5rem;
@@ -1071,11 +1075,10 @@ main {
     margin: 10px;
     width: 100%; }
   .flex-grid .list-title {
-    color: #eb7e49; }
-  .flex-grid .list-items {
-    padding: 1rem 0; }
-    .flex-grid .list-items ul {
-      margin-bottom: 0; }
+    color: #eb7e49;
+    margin-bottom: 1rem; }
+  .flex-grid .list-items ul {
+    margin-bottom: 0; }
 
 @media (min-width: 750px) {
   .flex-grid .lists {
@@ -1143,7 +1146,7 @@ main {
 .card {
   border-radius: 4px;
   background: white;
-  padding: 2rem;
+  padding: 1.5rem 1rem;
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.1);
   min-height: 100%; }
   .card h1,
@@ -1152,6 +1155,10 @@ main {
     margin-top: 0; }
   .card.solo {
     min-height: auto; }
+
+@media (min-width: 750px) {
+  .card {
+    padding: 2rem; } }
 
 .form-container {
   max-width: 500px; }
