update button font and email

--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -88,7 +88,7 @@ $button-background: $primary-color;
 $button-background-hover: darken($button-background, 8%);
 $button-color: #ffffff;
 $button-font-weight: 600;
-$button-font-family: 'Mandali', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial,
+$button-font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial,
   sans-serif;
 $button-font-size: 1.1rem;
 $button-border-width: 2px;
